Fix alignment of content in each section

--- a/styles.css
+++ b/styles.css
@@ -35,15 +35,32 @@ img {
     justify-content: space-evenly;
 }
 
-.header-content-right {
+.header-content-left {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    gap: 4px;
+}
+
+.header-content-right {
+    margin-left: 16px;
+    display: flex;
+    flex-direction: column;
+    align-items: end;
 }
 
 .header-content-right img {
     display: flex;
     justify-content: end;
+}
+
+.header-content button {
+    margin-top: 4px;
+    width: 100px;
+    height: 28px;
+    border-radius: 5px;
+    background-color: #3882F6;
+    color: white;
+    border-color: #3882F6;
 }
 
 .section-2 {
@@ -58,6 +75,11 @@ img {
     gap: 24px;
     flex-wrap: wrap;
     margin-top: 16px;
+    text-align: center;
+}
+
+.squares img {
+    margin-bottom: 8px;
 }
 
 .square1,
@@ -97,7 +119,7 @@ img {
     background-color: #3882F6;
     padding: 24px 48px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    border-radius: 5px;
+    border-radius: 8px;
 }
 
 .section-5 {
